--- a/style.css
+++ b/style.css
@@ -43,6 +43,7 @@ header{
     transform: translateX(-50%);
     left: 50%;
     top: 50%;
+    cursor: default;
 
     color: rgba(255,255,255,0%);
     font-size: 0%;
